--- a/view/staff/edit.ejs
+++ b/view/staff/edit.ejs
@@ -11,7 +11,6 @@
 <div
   class="modal fade"
   id="edit-<%= staff.id %>"
-  
   data-bs-keyboard="false"
   tabindex="-1"
   aria-labelledby="staticBackdropLabel"
@@ -32,15 +31,13 @@
 
       <div class="modal-body">
         <form
-          class="row g-3"
+          class="row g-3 needs-validation"
           action="/staffs/<%= staff.id %>/?_method=PUT"
           id="personal"
           method="POST"
           novalidate
         >
-          
           <div class="form-floating">
-           
             <input
               id="staffLastName"
               name="staff[lastname]"
@@ -50,9 +47,9 @@
               required
             />
             <label for="staffLastName" class="form-label">Nom</label>
+            <div class="valid-feedback">BIEN</div>
           </div>
           <div class="form-floating">
-          
             <input
               id="staffFirstName"
               name="staff[firstname]"
@@ -63,10 +60,10 @@
               autofocus
             />
             <label for="staffFirstName" class="form-label">Prénom</label>
+            <div class="valid-feedback">BIEN</div>
           </div>
-  
+
           <div class="form-floating">
-           
             <select
               id="staffFonction"
               name="staff[fonction]"
@@ -74,44 +71,71 @@
               value="<%= staff.fonction %>"
               required
             >
-              <option selected disabled>Fonction</option>
+              <option selected disabled value="">Fonction</option>
               <% if (staff.fonction === 'Medecin'){%>
-                <option class="option" value="Medecin" selected>Medecin</option>
-                <option class="option" value="technicien">Technicien</option>
-                <% }else{ %>
-                  <option class="option" value="Medecin">Medecin</option>
-                  <option class="option" value="technicien" selected>Technicien</option>
-                  <% } %>
+              <option class="option" value="Medecin" selected>Medecin</option>
+              <option class="option" value="technicien">Technicien</option>
+              <option class="option" value="assitant(e) Medicale">
+                Assitant(e) Medical(e)
+              </option>
+              <% }else if(staff.fonction === 'technicien'){ %>
+              <option class="option" value="Medecin">Medecin</option>
+              <option class="option" value="technicien" selected>
+                Technicien
+              </option>
+              <option class="option" value="assitant(e) Medicale">
+                Assitant(e) Medical(e)
+              </option>
+              <% }else { %>
+              <option class="option" value="Medecin">Medecin</option>
+              <option class="option" value="technicien">Technicien</option>
+              <option class="option" value="assitant(e) Medicale" selected>
+                Assitant(e) Medical(e)
+              </option>
+              <% } %>
             </select>
             <label for="staffGender" class="form-label">Fonction</label>
+            <div class="valid-feedback">BIEN</div>
           </div>
           <div class="form-floating">
-          
-          <div class="d-flex align-item-start form-check form-switch ms-2">
-            <% if (staff.externe === 'externe'){%>
-            <input class="form-check-input me-2" type="checkbox" name="staff[externe]" value="externe" role="switch" id="externe" checked>
-            <% }else{ %>
-              <input class="form-check-input me-2" type="checkbox" name="staff[externe]" value="externe" role="switch" id="externe">
+            <div class="d-flex align-item-start form-check form-switch ms-2">
+              <% if (staff.externe === 'externe'){%>
+              <input
+                class="form-check-input me-2"
+                type="checkbox"
+                name="staff[externe]"
+                value="externe"
+                role="switch"
+                id="externe"
+                checked
+              />
+              <% }else{ %>
+              <input
+                class="form-check-input me-2"
+                type="checkbox"
+                name="staff[externe]"
+                value="externe"
+                role="switch"
+                id="externe"
+              />
               <% } %>
               <label class="form-check-label" for="externe">Externe</label>
+              <div class="valid-feedback">BIEN</div>
+            </div>
           </div>
-        </div>
-                 
-          
+
           <div class="form-floating">
-           
             <input
               type="text"
               class="form-control"
               id="stafemail"
               name="staff[email]"
               value="<%= staff.email %>"
-              
             />
             <label for="staffemail" class="form-label">Email</label>
+            <div class="valid-feedback">BIEN</div>
           </div>
           <div class="form-floating">
-           
             <input
               type="text"
               class="form-control"
@@ -120,18 +144,23 @@
               value="<%= staff.phone %>"
             />
             <label for="staffPhone" class="form-label">Téléphone</label>
+            <div class="valid-feedback">BIEN</div>
           </div>
           <div class="modal-footer mt-3">
             <button
-            type="button"
-            class="btn btn-outline-danger"
-            data-bs-dismiss="modal"
+              type="button"
+              class="btn btn-outline-danger"
+              data-bs-dismiss="modal"
             >
-            Annuler
-          </button>
-          <button type="submit" id="staff-edit" class="btn btn-outline-warning">
-            Modifier 
-          </button>
+              Annuler
+            </button>
+            <button
+              type="submit"
+              id="staff-edit"
+              class="btn btn-outline-warning"
+            >
+              Modifier
+            </button>
           </div>
         </form>
       </div>
