--- a/view/patient/index.ejs
+++ b/view/patient/index.ejs
@@ -4,6 +4,7 @@
   <div class="col m-auto bg-light rounded-5 p-2">
     <h3 class="mb-4 text-center text-success">Liste des patients</h3>
     <div class="d-flex mb-2 justify-content-center">
+     
       <div class="form-floating col-2 me-2">
         <select
           id="age"
@@ -56,9 +57,18 @@
           <option class="option" value="no-acte">No Acte</option>
         </select>
 
-        <label id="hide" for="nextacte" class="form-label">Prochaine Acte</label>
+        <label id="hide" for="nextacte" class="form-label"
+          >Prochaine Acte</label
+        >
         <div class="valid-feedback">BIEN</div>
       </div>
+      <a
+        class="btn btn-outline-secondary py-3 px-2"
+        href="/patient/generatepdf"
+        target="_blank"
+        >Imprimer <i class="bi bi-printer-fill py-3 px-2"></i>
+      </a>
+      <%- include("./newModal")%>
     </div>
   </div>
   <form class="d-flex mt-2">
